fixed bug where photoInputs were not showing at small screen width and fixed extra top/bottom border at small width

--- a/src/components/PhotoInput/PhotoInput.scss
+++ b/src/components/PhotoInput/PhotoInput.scss
@@ -5,14 +5,40 @@
   
   &__box {
     align-items: center;
+    border: 1px solid var(--background-color);
     cursor: pointer;
     display: flex;
-    height: 100%;
+    height: 15rem;
     justify-content: center;
     position: relative;
     overflow: hidden;
-    width: 100%;
+    width: 15rem;
     transition: scale 0.1s ease;
+
+    @media(min-width: 500px) {
+      height: 11rem;
+      width: 11rem;
+    }
+
+    @media(min-width: 600px) {
+      height: 12.5rem;
+      width: 12.5rem;
+    }
+
+    @media(min-width: 700px) {
+      height: 13.5rem;
+      width: 13.5rem;
+    }
+
+    @media(min-width: $tablet) {
+      height: 15rem;
+      width: 15rem;
+    }
+
+    @media(min-width: $largeTablet) {
+      height: 10rem;
+      width: 10rem;
+    }
     
     &.disabled {
       cursor: default;
@@ -118,7 +144,6 @@
     }
   }
 
-
   &__clear {
     align-items: center;
     background: var(--background-color);
@@ -130,10 +155,8 @@
     width: 2.5rem;
   }
 
-
   &__close-icon {
     background-color: var(--text-color); 
-    border-radius: 2px;
     height: 3px;
     position: absolute;
     transform-origin: center;
