--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -4,6 +4,8 @@
   // general styling variables
   --borderRadius: 8px;
 
+  --tablet: 768px;
+
   // colors
   --modalOverlayBg: rgba(0, 0, 0, 0.5);
   
